# TractsROIShellSeeding

./: README.md
TractsROIShellSeeding/: CMakeLists.txt  TractsROIShellSeeding.cxx  TractsROIShellSeeding.xml
TractsROIShellSeeding/Scafolds/ROIDilate/: CMakeLists.txt  ROIDilate.cxx  ROIDilate.xml
TractsROIShellSeeding/Scafolds/ROIDilate/Data/Input/: fa-label_1.nrrd
TractsROIShellSeeding/Scafolds/ROIDilate/Testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
TractsROIShellSeeding/Scafolds/ROIDilate/Testing/Cxx/: CTestTestfile.cmake  Makefile  cmake_install.cmake  dummyCLIData_config.cmake  dummyCLITest
